# cs5340-grp6

./: .gitignore  README.md  additive_noise.py  audio_corruptor_single.py  corrupted_data.npy  exp_v1.py  extract.py  pipeline.py  project.md  pyproject.toml  requirements.txt  requirements_new.txt  setup.py  vae_sample.py  waveform_sinus_dist.py  waveform_soft_clip_dist.py  waveform_tap_n_flutter.py  waveform_to_mel.py
corruptions/: __init__.py  additive.py  frequency.py  nonlinear.py  registry.py
corruptors/: additive_noise.py  audio_corruptor_freq.py  audio_corruptor_single.py  waveform_sinus_dist.py  waveform_soft_clip_dist.py  waveform_tap_n_flutter.py
data/: corrupted_data.npy  sample_fft_corruption.txt  sample_fft_corruption_regions.csv
ear_vae/: __init__.py  autoencoders.py  ear_vae.py  transformer.py
experiments/: exp_v1.py  exp_v1_1.py  exp_v2.py
pipelines/: pipeline_eval.py  preprocessing.py
results/: music_metrics_flat.csv  reorganize_results.py  visualise_metrics.py
scripts/: compute_stats.py  corrupt_dataset.py  evaluate.py  gpu_job.sh  gpu_vae_sample.sh  run_reconstruction.py  slurm-install.sh  slurm-pipeline.sh  slurm-run.sh  vae_sample.py
scripts/logs/: stderr_recon_454398.slurmlog  stdout_recon_454398.slurmlog
scripts/pipeline/: submit_jobs.sh  worker.slurm
scripts/preprocessing/: submit_jobs.sh  worker.slurm
utils/: audio_io.py  compute_stats.py  evaluate.py  extract.py  losses.py  metrics.py  music_metrics.py  regions.py  vae_sample.py  visualise.py  visualise_metrics.py
vae_ckpt/: model_config.json
