[project]
name = "cs5340-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.62.1",
    "huggingface-hub>=1.8.0",
    "kiwisolver>=1.5.0",
    "matplotlib>=3.10.8",
    "numpy",
    "packaging>=26.0",
    "pillow>=12.1.1",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.4.0",
]
